kubernetes/apps/seafile/mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: seafile-mysql
  namespace: apps
spec:
  ports:
    - port: 3306
  selector:
    app: seafile-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seafile-mysql
  namespace: apps
spec:
  serviceName: "seafile-mysql"
  replicas: 1
  selector:
    matchLabels:
      app: seafile-mysql
  template:
    metadata:
      labels:
        app: seafile-mysql
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 5Gi
