kubernetes/apps/seafile/memcached.yml
apiVersion: v1
kind: Service
metadata:
  name: seafile-memcached
  namespace: apps
spec:
  ports:
    - port: 11211
  selector:
    app: seafile-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-memcached
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-memcached
  template:
    metadata:
      labels:
        app: seafile-memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6-alpine
          ports:
            - containerPort: 11211
          args:
            - "-m"
            - "128"
