kubernetes/apps/seafile/seafile.yml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: apps
spec:
  ports:
    - port: 80
      name: http
    - port: 8000
      name: seahub
    - port: 8082
      name: seafile-server
  selector:
    app: seafile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:11.0.12
          ports:
            - containerPort: 80
            - containerPort: 8000
            - containerPort: 8082
          volumeMounts:
            - name: shared
              mountPath: /shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: seafile-shared
